@@ -1,3 +1,9 @@
+2018-06-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCClospre.hpp,
+	  support/regression/tests/bug-2761.c:
+	  Fix bug #2761.
+
 2018-06-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCglobl.h,
